--- a/admin-side/package.json
+++ b/admin-side/package.json
@@ -11,9 +11,12 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.26.0",
+    "bootstrap": "^5.3.0",
     "firebase": "^9.6.7",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
